--- a/android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/android/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,5 +10,10 @@
         android:name="com.fsq.pobop.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/nav_pantry"
+        android:name="com.fsq.pobop.ui.pantry.PantryFragment"
+        android:label="@string/pantry"
+        tools:layout="@layout/fragment_pantry" />
 
 </navigation>
