--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -66,6 +66,7 @@
         android:id="@+id/edtTxtPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/editbackground"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
