--- a/android/app/src/main/res/layout/activity_recipes.xml
+++ b/android/app/src/main/res/layout/activity_recipes.xml
@@ -10,6 +10,9 @@
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="63dp"
         tools:layout_editor_absoluteY="126dp"
-        android:layout_margin="15dp"/>
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
