--- a/android/app/src/main/res/layout/recipe_card.xml
+++ b/android/app/src/main/res/layout/recipe_card.xml
@@ -6,15 +6,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
     app:cardCornerRadius="7dp"
-    android:elevation="7dp"
-    android:layout_margin="5dp">
-    
+    android:elevation="7dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:layout_width="130dp"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
             android:id="@+id/imgRecipe"
             android:src="@mipmap/ic_launcher"/>
