--- a/android/app/src/main/res/layout/recipe_card.xml
+++ b/android/app/src/main/res/layout/recipe_card.xml
@@ -26,8 +26,33 @@
             android:textSize="16sp"
             android:layout_below="@+id/imgRecipe"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="8dp"
             android:id="@+id/txtRecipeName"/>
+
+        <TextView
+            android:id="@+id/txtSpoonacularScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txtRecipeName"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:text="Spoonacular Score"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:stepSize=".5"
+            android:layout_marginTop="8dp"
+            android:numStars="5"
+            android:isIndicator="true"
+            android:layout_below="@+id/txtSpoonacularScore"
+            />
+
+
     </RelativeLayout>
 
 </com.google.android.material.card.MaterialCardView>
