--- a/android/app/src/main/res/layout/activity_pantry.xml
+++ b/android/app/src/main/res/layout/activity_pantry.xml
@@ -15,6 +15,8 @@
         android:clickable="true"
         android:src="@android:color/transparent"
         android:text="@string/filter"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:gravity="center"
+        app:icon="@mipmap/filter"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
