--- a/android/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,5 +12,9 @@
             android:id="@+id/nav_pantry"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/pantry" />
+        <item
+            android:id="@+id/nav_recipe"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/recipes" />
     </group>
 </menu>
