--- a/android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/android/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,6 +14,15 @@
         android:id="@+id/nav_pantry"
         android:name="com.fsq.pobop.ui.pantry.PantryFragment"
         android:label="@string/pantry"
-        tools:layout="@layout/fragment_pantry" />
+        tools:layout="@layout/fragment_pantry" >
+        <action
+            android:id="@+id/action_nav_pantry_to_nav_add_ingredient"
+            app:destination="@id/nav_add_ingredient" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_add_ingredient"
+        android:name="com.fsq.pobop.ui.pantry.AddIngredientFragment"
+        android:label="Add New Ingredient"
+        tools:layout="@layout/fragment_add_ingredient" />
 
 </navigation>
