--- a/android/app/src/main/res/layout/activity_pantry.xml
+++ b/android/app/src/main/res/layout/activity_pantry.xml
@@ -19,4 +19,12 @@
         android:gravity="center"
         app:icon="@mipmap/filter"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="0dp"
+        />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
