--- a/android/app/src/main/res/layout/fragment_pantry.xml
+++ b/android/app/src/main/res/layout/fragment_pantry.xml
@@ -10,6 +10,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewIngredients"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
