--- a/android/app/src/main/res/layout/item_ingredient.xml
+++ b/android/app/src/main/res/layout/item_ingredient.xml
@@ -11,14 +11,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="4dp"
+            android:layout_marginTop="4dp">
 
             <TextView
                 android:id="@+id/textViewIngredientName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/textViewIngredientExpiry"
