--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -24,12 +24,13 @@
         android:id="@+id/emailText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="@string/email"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/edtTxtEmail"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupText"
-        tools:layout_editor_absoluteX="16dp"
         tools:ignore="MissingConstraints" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -58,12 +59,13 @@
         android:id="@+id/passwordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        tools:layout_editor_absoluteX="16dp"
         android:text="@string/password"
 
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/edtTxtPass"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtTxtEmail"
         tools:ignore="MissingConstraints" />
 
@@ -95,7 +97,7 @@
         android:layout_width="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:layout_marginBottom="24dp"
         android:text="Sign up"
         app:layout_constraintBottom_toBottomOf="parent"
