--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -17,8 +17,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/emailText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/emailText"
@@ -36,8 +35,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edtTxtEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
+        android:layout_height="50dp"
         app:layout_constraintTop_toBottomOf="@+id/emailText"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginLeft="16dp"
@@ -48,7 +46,6 @@
             android:id="@+id/registrationEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints" />
 
@@ -72,8 +69,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edtTxtPass"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
+        android:layout_height="50dp"
         app:layout_constraintTop_toBottomOf="@+id/passwordText"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginLeft="16dp"
