--- a/android/app/src/main/res/layout/fragment_filter.xml
+++ b/android/app/src/main/res/layout/fragment_filter.xml
@@ -18,6 +18,16 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
+        android:id="@+id/btnCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/btnCuisine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
