--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,7 +18,7 @@
 
     <item
         android:id="@+id/nav_qr"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@mipmap/qrcode"
         android:title="@string/qr_string" />
 
 </menu>
