--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,12 +8,12 @@
 
     <item
         android:id="@+id/nav_pantry"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@mipmap/pantry"
         android:title="@string/pantry" />
 
     <item
         android:id="@+id/nav_recipe"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/recipe_photo"
         android:title="@string/recipes" />
 
     <item
