--- a/android/app/src/main/res/layout/recipe_card.xml
+++ b/android/app/src/main/res/layout/recipe_card.xml
@@ -6,7 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
     app:cardCornerRadius="7dp"
-    android:elevation="7dp">
+    android:elevation="7dp"
+    android:layout_margin="16dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
