--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="220dp"
         tools:ignore="MissingConstraints"
         android:hint="Email">
 
@@ -25,8 +25,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            android:background="#000000"/>
+            tools:ignore="MissingConstraints" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,8 +70,7 @@
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/editTextUsername"
-            android:background="#000000" />
+            app:layout_constraintTop_toBottomOf="@id/editTextUsername" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
