--- a/android/app/src/main/res/layout/fragment_qr.xml
+++ b/android/app/src/main/res/layout/fragment_qr.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.budiyev.android.codescanner.CodeScannerView
         android:id="@+id/scanner_view"
@@ -30,7 +29,6 @@
         android:layout_marginTop="20dp"
         android:text="Please focus on the QR Code"
         android:textSize="20sp"
-        android:gravity="center"
-        android:textColor="@color/white"/>
+        android:gravity="center"/>
 
 </RelativeLayout>
