it is poplar's problem now
Co-Authored-By: Poplar <51007937+FSq-Poplar@users.noreply.github.com>

--- a/android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/android/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,7 +26,7 @@
         tools:layout="@layout/fragment_add_ingredient" />
     <fragment
         android:id="@+id/nav_qr"
-        android:name="com.fsq.pobop.ui.qr.QR"
+        android:name="com.fsq.pobop.ui.qr.QRFragment"
         android:label="QR" />
 
 </navigation>
