--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -83,6 +83,7 @@
             android:backgroundTint="#15a14a"
             android:src="@drawable/button_background"
             android:text="Login"
+            android:textColor="#edf8e7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edtTxtPass" />
