--- a/android/app/src/main/res/layout/fragment_add_ingredient.xml
+++ b/android/app/src/main/res/layout/fragment_add_ingredient.xml
@@ -5,7 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.pantry.AddIngredientFragment" >
+    tools:context=".ui.pantry.AddIngredientFragment"
+    android:layout_marginTop="32dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/editTextIngredientName"
@@ -13,18 +22,25 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:rotation="-12" />
+        android:hint="Enter ingredient"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Expiry date"/>
     <TextView
         android:id="@+id/textViewDate"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:rotation="-46" />
+        android:layout_height="40dp"
+        android:text="Date"
+        android:gravity="bottom"
+        android:textSize="18sp"/>
 
     <Button
+        android:layout_marginTop="24dp"
         android:id="@+id/buttonAddIngredient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:rotation="-79"
         android:text="Add" />
 </LinearLayout>
