--- a/android/app/src/main/res/layout/item_ingredient.xml
+++ b/android/app/src/main/res/layout/item_ingredient.xml
@@ -8,27 +8,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp">
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp">
 
             <TextView
                 android:id="@+id/textViewIngredientName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
-                android:textStyle="bold"/>
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/textViewIngredientExpiry"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="@color/black"
+                android:textAlignment="textEnd"
+                android:layout_marginRight="16dp"/>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@android:color/darker_gray"/>
+
 </LinearLayout>
