enter ingredient page slightly prettier

--- a/android/app/src/main/res/layout/fragment_add_ingredient.xml
+++ b/android/app/src/main/res/layout/fragment_add_ingredient.xml
@@ -13,16 +13,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
-        android:textColor="@color/black"/>
+        android:layout_marginTop="24dp"
+        android:text="What ingredients did you buy today?"/>
 
-    <EditText
-        android:id="@+id/editTextIngredientName"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Enter ingredient"/>
+        android:hint="Enter Ingredient"
+        android:layout_marginTop="8dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editTextIngredientName"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:layout_width="wrap_content"
