recipe text design fixes

--- a/android/app/src/main/res/layout/recipe_card.xml
+++ b/android/app/src/main/res/layout/recipe_card.xml
@@ -7,11 +7,13 @@
     android:id="@+id/card"
     app:cardCornerRadius="7dp"
     android:elevation="7dp"
-    android:layout_margin="8dp">
+    android:layout_margin="2dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp">
 
         <ImageView
             android:layout_width="match_parent"
@@ -22,13 +24,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:lines="2"
             android:text="Recipe Name"
-            android:textStyle="bold"
             android:textSize="16sp"
+            android:textAlignment="center"
             android:layout_below="@+id/imgRecipe"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
-            android:id="@+id/txtRecipeName" />
+            android:id="@+id/txtRecipeName"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"/>
 
         <TextView
             android:id="@+id/txtSpoonacularScore"
@@ -36,8 +41,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtRecipeName"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginRight="16dp"
             android:text="Spoonacular Score"
+            android:textAlignment="center"
             android:textSize="16sp"
             android:textStyle="bold" />
 
