--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -80,7 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="38dp"
-            android:backgroundTint="#15a14a"
+            android:backgroundTint="#98db6c"
             android:src="@drawable/button_background"
             android:text="Login"
             android:textColor="#edf8e7"
