small ui change

--- a/android/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/android/app/src/main/res/layout/fragment_recipe_details.xml
@@ -47,7 +47,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewRecipeDetail"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:paddingBottom="?attr/actionBarSize"
+                />
         </LinearLayout>
     </ScrollView>
 
